k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: monitoring-ingress
  namespace: monitoring-app

spec:
  ingressClassName: nginx

  rules:
    - host: api.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: monitoring-app-service

                port:
                  number: 80
    - host: worker.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: monitoring-worker-service

                port:
                  number: 3001

    - host: stats.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: monitoring-stats-service

                port:
                  number: 3002

    - host: grafana.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: grafana-service

                port:
                  number: 3000

    - host: prometheus.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: prometheus-service

                port:
                  number: 9090
